frontend/test/should_fail/keepOneForEach_match_class_accumulation_method_type_mismatch.grg
match class mc
{
	def var i:int;
	def var j:string;
} \ keepOneForEach<i>Accumulate<j>By<sum>
